# libfyaml

./: .actrc  .dockerignore  .gitignore  .libtool-version  2025-11-10-switch-to-reflection-new3-claude-branch.txt  2025-11-12-i-have-updated-the-branch-take-a-look-and-tell-me.txt  2025-11-14-this-session-is-being-continued-from-a-previous-co.txt  API_GAPS_ANALYSIS.md  BENCHMARKS-SUMMARY.md  BSD-SETUP.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEBUGGING-WORKFLOWS.md  DOCUMENTATION-UPDATES.md  Dockerfile  Dockerfile-build-deb  Dockerfile.alpine  GENERIC_API_GAPS_DETAILED.md  GITHUB-RELEASE-v1.0.0-alpha8.md  INSTALL-ACT.md  LOCAL-TESTING.md  MACRO_SHORTENING_SUMMARY.md  Makefile.am  Makefile.in  NEW-FEATURES-LAMBDAS-DEC-2025.md  PARALLEL-README.md  README.md  RUN-WORKFLOWS-LOCALLY.md  TESTING-QUICK-REFERENCE.md  WINDOWS.md  WIP-convert-libfyaml-parser-to-tests.md  aclocal.m4  bench_alloc.c  bench_compare.cpp  bench_parallel.c  bench_parallel_light.c  bootstrap.sh  config.h.in  configure  (+26 more)
doc/: C-VS-PYTHON-BENCHMARKS.md  C-VS-PYTHON-REDUCE.md  COMMENT-HANDLING.md  DEDUP-LOCKLESS-DESIGN.md  DEDUP-PERFORMANCE-COMPARISON.md  FILTER-OPTIMIZATION-RESULTS.md  GENERIC-API-AUDIT.md  GENERIC-API-BASICS.md  GENERIC-API-DESIGN.md  GENERIC-API-EXAMPLES.md  GENERIC-API-FUNCTIONAL.md  GENERIC-API-LAMBDAS.md  GENERIC-API-MEMORY.md  GENERIC-API-PATTERNS.md  GENERIC-API-PERFORMANCE.md  GENERIC-API-REFERENCE.md  GENERIC-API-TODO.md  GENERIC-API-UTILITIES.md  GENERIC-API.md  HACKERNEWS-ANNOUNCEMENT.md  LIBRARY-COMPARISONS.md  LIGHT-WORKLOAD-DEDUP-COMPARISON.md  Makefile.am  Makefile.in  PARALLEL-BENCHMARKS-UPDATED.md  PARALLEL-BENCHMARKS.md  PARALLEL-MAP-FILTER-IMPLEMENTATION.md  PARALLEL-REDUCE-RESULTS.md  RECOMMENDED-PUBLIC-API.md  RELEASE-BLOG-POST.md  SESSION-CONTINUATION.md  SHORT_MACRO_NAMES.md  UNIFIED-API-MIGRATION.md  WHY-LIBFYAML.md  conf.py  generics-guide.rst  index.rst  intro.rst  libfyaml-core.rst  libfyaml-generics.rst  (+6 more)
doc/canned-man/: fy-tool.1  libfyaml-core.3  libfyaml-generics.3  libfyaml-misc.3  libfyaml-reflection.3  libfyaml.3
doc/man/: fy-tool.rst
examples/: CMakeLists.txt  README.md  basic-parsing.c  build-from-scratch.c  config.yaml  document-manipulation.c  event-streaming.c  generic-adoption-bridge.c  generic-lambda-capture.c  generic-literals.c  generic-parallel-transform.c  generic-roundtrip.c  generic-transform.c  intro-config.yaml  intro-core-update.c  intro-generic-update.c  intro-reflection-update.c  invoice.yaml  path-queries.c  quick-start.c  reflection-config.h  reflection-config.yaml  reflection-export-packed.c  reflection-intro-config.h  reflection-libclang.c  reflection-packed.c
examples/benchmarks/: CMakeLists.txt  bench_functional.c  bench_parallel.c  bench_parallel_heavy.c  bench_parallel_light.c  bench_parallel_reduce.c  yaml-parallel-example.c
examples/clojure/: clojure-bench.clj  clojure-parallel-bench.clj  clojure-parallel.clj  clojure-simple.clj  deps.edn  project.clj  yaml-bench-parallel.clj  yaml-bench-simple.clj  yaml-bench.clj
examples/python/: python-parallel-bench-2.py  python-parallel-bench.py  yaml-bench.py
python-libfyaml/: .gitignore  ACTUAL_API.md  ALLPRICES-BENCHMARK-FINAL.md  ALLPRICES-BENCHMARK-RESULTS.md  API-COMPARISON-PYTHON-VS-TRENCHCOAT.md  API-COMPARISON.md  API-MIGRATION-MEMORY-RESULTS.md  BENCHMARK-COMPARISON.md  BENCHMARK-JSON-README.md  BENCHMARK-RESULTS.md  BENCHMARK-SESSION.md  BENCHMARK-WITH-RAPIDYAML.md  COMPLETE-TYPE-PROPAGATION.md  CONTINUATION-SESSION-2.md  DECORATED-INT-SUPPORT.md  DEDUP-BENCHMARK-RESULTS.md  DESIGN-NOTES.md  ISINSTANCE-IMPLEMENTATION-SUMMARY.md  LICENSE  MANIFEST.in  MEMORY-INVESTIGATION-SUMMARY.md  MEMORY-LIMIT-COMPARISON.md  MEMORY-MANAGEMENT-GUIDE.md  MIGRATION-TO-EXPORTED-API.md  MUTATION-DESIGN.md  PYYAML-COMPARISON.md  PYYAML-QUIRKS.md  PYYAML-TEST-FAILURES.md  QUICKSTART.md  README.md  SESSION-CONTINUATION.md  SESSION-SUMMARY.md  TYPE-PROPAGATION.md  UTILITIES-README.md  benchmark_allprices.py  benchmark_json.py  benchmark_memory_breakdown.py  benchmark_mmap_vs_string.py  benchmark_processing.py  conftest_libfyaml.py  (+10 more)
python-libfyaml/attic/: AllPrintings.json  C-PARSER-NEL-BLOCK-SCALAR-BUG.md  PYYAML-TEST-FAILURES.md
python-libfyaml/docs/: API.md  INDEX.md  benchmark-parse-cache.py  benchmark-parse.py
python-libfyaml/homeassistant-test/: conftest.py  test_annotatedyaml.py
python-libfyaml/libfyaml/: __init__.py  __init__.pyi  _libfyaml.c  _libfyaml_minimal.c
python-libfyaml/tests/: conftest.py  test_advanced_methods.py  test_basic.py  test_decorated_int.py  test_diag.py  test_hash_support.py  test_isinstance.py  test_markers_comments.py  test_mode_parameter.py  test_pyyaml_compat.py  test_sized_string.py
src/: Makefile.am  Makefile.in
src/allocator/: fy-allocator-auto.c  fy-allocator-auto.h  fy-allocator-dedup.c  fy-allocator-dedup.h  fy-allocator-durable.c  fy-allocator-durable.h  fy-allocator-linear.c  fy-allocator-linear.h  fy-allocator-malloc.c  fy-allocator-malloc.h  fy-allocator-mremap.c  fy-allocator-mremap.h  fy-allocator-parse-util.c  fy-allocator-parse-util.h  fy-allocator.c  fy-allocator.h
src/blake3/: blake3.c  blake3.h  blake3_avx2.c  blake3_avx2_x86-64_unix.S  blake3_avx512.c  blake3_avx512_x86-64_unix.S  blake3_backend.c  blake3_be_cpusimd.c  blake3_host_state.c  blake3_impl.h  blake3_internal.h  blake3_neon.c  blake3_portable.c  blake3_sse2.c  blake3_sse2_x86-64_unix.S  blake3_sse41.c  blake3_sse41_x86-64_unix.S  fy-blake3.c
src/check/: fy-check.h
src/generic/: fy-generic-decoder.c  fy-generic-decoder.h  fy-generic-docbuilder.c  fy-generic-encoder.c  fy-generic-encoder.h  fy-generic-iter.c  fy-generic-op.c  fy-generic.c  fy-generic.h
src/getopt/: getopt.c
src/internal/: fy-allocators.c  fy-b3sum.c  fy-generics.c  fy-thread.c  libfyaml-parser.c
src/lib/: fy-accel.c  fy-accel.h  fy-atom.c  fy-atom.h  fy-cache.c  fy-cache.h  fy-composer-diag.c  fy-composer.c  fy-composer.h  fy-ctype.h  fy-diag.c  fy-diag.h  fy-doc-diag.c  fy-doc.c  fy-doc.h  fy-docbuilder-diag.c  fy-docbuilder.c  fy-docbuilder.h  fy-docstate.c  fy-docstate.h  fy-dump.c  fy-dump.h  (+28 more)
(+926 files in other folders)
